--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <body>
     <img src="csc106_banner.jpg">
     <h1>Welcome to Saif's Programming Portfolio</h1>
-    
+    <table>
+        <thead>
+            <tr>
+                <th>Home</th>
+                <th>Javascripts</th>
+                <th>Apps</th>
+                <th>About Me</th>
     </body>
 </html>   
