--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <table>
         <thead>
             <tr>
-                <th>Home</th>
-                <th>Javascripts</th>
-                <th>Apps</th>
-                <th>About Me</th>
-    </body>
+                <th>Home<img src="home.png"></th>
+                <th>Javascripts<img src="javascripts.png"></th>
+                <th>Apps<img src="apps.png"></th>
+                <th>About Me<img src="about.png"></th>
+            </tr>
+        </thead>
+     </table>
+     </body>
 </html>   
