--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <table>
         <thead>
             <tr>
-                <th>Home<img src="home.png"></th>
-                <th>Javascripts<img src="javascripts.png"></th>
-                <th>Apps<img src="apps.png"></th>
-                <th>About Me<img src="about.png"></th>
+                <th><img src="home.png"></th>
+                <th><img src="javascripts.png"></th>
+                <th><img src="apps.png"></th>
+                <th><img src="about.png"></th>
             </tr>
         </thead>
      </table>
