--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <thead>
             <tr>
                 <th><a href="https://2saif.github.io/index.html"<img src="home.png"></a></th>
-                <th><img src="javascripts.png"></th>
+                <th><a href="https://2saif.github.io/javascripts.html"<img src="javascripts.png"></a></th>
                 <th><img src="apps.png"></th>
                 <th><img src="about.png"></th>
             </tr>
