--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <table>
         <thead>
             <tr>
-                <th><a href="https://2saif.github.io/index.html"<img src="home.png"></a></th>
-                <th><a href="https://2saif.github.io/javascripts.html"<img src="javascripts.png"></a></th>
+                <th><a href="https://2saif.github.io/index.html"</a><img src="home.png"></th>
+                <th><a href="https://2saif.github.io/javascripts.html"</a><img src="javascripts.png"></th>
                 <th><img src="apps.png"></th>
                 <th><img src="about.png"></th>
             </tr>
