--- a/apps.html
+++ b/apps.html
@@ -12,10 +12,10 @@
             <tr>
                 <th><a href="https://2saif.github.io/index.html"</a><img src="home.png"></th>
                 <th><a href="https://2saif.github.io/javascripts.html"</a><img src="javascripts.png"></th>
-                <th><a href="https://2saif.github.io/apps.html</a><img src="apps.png"></th>
-                <th><img src="about.png"></th>
+                <th><a href="https://2saif.github.io/apps.html"</a><img src="apps.png"></th>
+                <th><a href="https://2saif.github.io/about.html"</a><img src="about.png"></th>
             </tr>
         </thead>
      </table>
      </body>
-</html>  
+</html> 
