--- a/apps.html
+++ b/apps.html
@@ -6,7 +6,7 @@
     </head>
     <body>
     <img src="csc106_banner.jpg">
-    <h1>Welcome to Saif's Programming Portfolio</h1>
+    <h1>My Apps</h1>
     <table>
         <thead>
             <tr>
