--- a/javascripts.html
+++ b/javascripts.html
@@ -7,6 +7,16 @@
     <body>
     <img src="csc106_banner.jpg">
     <h1>My Javascript</h1>
+        <table>
+        <thead>
+            <tr>
+                <th><a href="https://2saif.github.io/index.html"</a><img src="home.png"></th>
+                <th><a href="https://2saif.github.io/javascripts.html"</a><img src="javascripts.png"></th>
+                <th><a href="https://2saif.github.io/apps.html"</a><img src="apps.png"></th>
+                <th><a href="https://2saif.github.io/about.html"</a><img src="about.png"></th>
+            </tr>
+        </thead>
+     </table>
     Back to <a href="index.html"> home page </a>
     
     </body>
