--- a/apps.html
+++ b/apps.html
@@ -17,5 +17,7 @@
             </tr>
         </thead>
      </table>
+        Back to <a href="index.html"> home page </a>
+        
      </body>
 </html> 
