--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
             </tr>
         </thead>
      </table>
+        <p> Welcome to my programming portfolio. On this website, I will upload all necessary items to this website that are related to CSC 106. On the Javascript tab, I will upload all javascript program links that I have created throughout this entire course. On the apps tab, I will upload link of all the apps that I have written thoughout this course. The about me page is pretty self explanatory. Now that I have explained to you what my website is about, you can look through and see all the additions to this website.</p> 
      </body>
 </html>   
