--- a/apps.html
+++ b/apps.html
@@ -17,6 +17,7 @@
             </tr>
         </thead>
      </table>
+        <p>On this tab, I will upload all the Apps I have written throught attending the CSC 106 course.</p>
         Back to <a href="index.html"> home page </a>
         
      </body>
