--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <table>
         <thead>
             <tr>
-                <th><a href="https://2saif.github.io/index.html"</a><img src="home.png"></th>
-                <th><a href="https://2saif.github.io/javascripts.html"</a><img src="javascripts.png"></th>
-                <th><a href="https://2saif.github.io/apps.html"</a><img src="apps.png"></th>
-                <th><a href="https://2saif.github.io/about.html"</a><img src="about.png"></th>
+                <th><a href="https://2saif.github.io/index.html"</a><img src="HOME.png"
+                <th><a href="https://2saif.github.io/javascripts.html"</a><img src="JAVASCRIPTS.png"></th>
+                <th><a href="https://2saif.github.io/apps.html"</a><img src="APPS.png"></th>
+                <th><a href="https://2saif.github.io/about.html"</a><img src="ABOUTS.png"></th>
             </tr>
         </thead>
      </table>
