--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <th><a href="https://2saif.github.io/index.html"</a><img src="HOME.png"
                 <th><a href="https://2saif.github.io/javascripts.html"</a><img src="JAVASCRIPTS.png"></th>
                 <th><a href="https://2saif.github.io/apps.html"</a><img src="APPS.png"></th>
-                <th><a href="https://2saif.github.io/about.html"</a><img src="ABOUTS.png"></th>
+                <th><a href="https://2saif.github.io/about.html"</a><img src="ABOUT.png"></th>
             </tr>
         </thead>
      </table>
