--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <table>
         <thead>
             <tr>
-                <th><a href="https://2saif.github.io/index.html"</a><img src="HOME.png"
-                <th><a href="https://2saif.github.io/javascripts.html"</a><img src="JAVASCRIPTS.png"></th>
-                <th><a href="https://2saif.github.io/apps.html"</a><img src="APPS.png"></th>
-                <th><a href="https://2saif.github.io/about.html"</a><img src="ABOUT.png"></th>
+                <th><a href="https://2saif.github.io/index.html"</a><img src="HOME FINAL.png"
+                <th><a href="https://2saif.github.io/javascripts.html"</a><img src="JAVASCRIPTS FINAL.png"></th>
+                <th><a href="https://2saif.github.io/apps.html"</a><img src="APPS FINAL.png"></th>
+                <th><a href="https://2saif.github.io/about.html"</a><img src="ABOUT ME FINAL.png"></th>
             </tr>
         </thead>
      </table>
