--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Saif's Programming Portfolio</title>
     </head>
     <body>
-    <img src="background.jpg">
+    <img src="banner.png">
     <h1>Welcome to Saif's Programming Portfolio</h1>
     <table>
         <thead>
