--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>Saif's Programming Portfolio</title>
+        <style>
+            #HOME-FINAL {
+                float:left
+            }
     </head>
     <body>
     <img src="banner.png">
@@ -10,10 +14,10 @@
     <table>
         <thead>
             <tr>
-                <th><a href="https://2saif.github.io/index.html"</a><img src="HOME FINAL.png"
-                <th><a href="https://2saif.github.io/javascripts.html"</a><img src="JAVASCRIPTS FINAL.png"></th>
-                <th><a href="https://2saif.github.io/apps.html"</a><img src="APPS FINAL.png"></th>
-                <th><a href="https://2saif.github.io/about.html"</a><img src="ABOUT ME FINAL.png"></th>
+                <th><a href="https://2saif.github.io/index.html"</a><img id="HOME-FINAL" src="HOME FINAL.png"</th>
+                <th><a href="https://2saif.github.io/javascripts.html"</a><img id="JAVASCRIPTS-FINAL" src="JAVASCRIPTS FINAL.png"></th>
+                <th><a href="https://2saif.github.io/apps.html"</a><img id="APPS-FINAL" src="APPS FINAL.png"></th>
+                <th><a href="https://2saif.github.io/about.html"</a><img id="ABOUT-ME-FINAL" src="ABOUT ME FINAL.png"></th>
             </tr>
         </thead>
      </table>
