--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Saif's Programming Portfolio</title>
+        <style>
+            #HOME-FINAL {
+                margin-right:10px;
+            }
+            
     </head>
     <body>
     <img src="banner.png">
