--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
     <img src="banner.png">
     <h1>Welcome to Saif's Programming Portfolio</h1>
-    <table>
+    <table id="nav-table">
         <thead>
             <tr>
                 <th><a href="https://2saif.github.io/index.html"</a><img id="HOME-FINAL" src="HOME FINAL.png"</th>
