--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-    <img src="banner.png">
+    <img src="bannerfinalusethisone.png">
     <h1>Welcome to Saif's Programming Portfolio</h1>
     <table id="nav-table">
         <thead>
