--- a/apps.html
+++ b/apps.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Saif's Programming Portfolio</title>
+        <title>Saif's Programming Portfolio's Apps</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
     <img src="bannerfinalusethisone.png">
-    <h1>Welcome to Saif's Programming Portfolio</h1>
+    <h1>MY APPS</h1>
     <table id="nav-table">
         <thead>
             <tr>
