--- a/javascripts.html
+++ b/javascripts.html
@@ -2,18 +2,19 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Saif's Programming Portfolio</title>
+        <title>Saif's Programming Portfolio's JavaScripts</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-    <img src="csc106_banner.jpg">
-    <h1>My Javascript</h1>
-        <table>
+    <img src="bannerfinalusethisone.png">
+    <h1>MY JAVASCRIPTS</h1>
+    <table id="nav-table">
         <thead>
             <tr>
-                <th><a href="https://2saif.github.io/index.html"</a><img src="home.png"></th>
-                <th><a href="https://2saif.github.io/javascripts.html"</a><img src="javascripts.png"></th>
-                <th><a href="https://2saif.github.io/apps.html"</a><img src="apps.png"></th>
-                <th><a href="https://2saif.github.io/about.html"</a><img src="about.png"></th>
+                <th><a href="https://2saif.github.io/index.html"</a><img id="HOME-FINAL" src="HOME FINAL.png"</th>
+                <th><a href="https://2saif.github.io/javascripts.html"</a><img id="JAVASCRIPTS-FINAL" src="JAVASCRIPTS FINAL.png"></th>
+                <th><a href="https://2saif.github.io/apps.html"</a><img id="APPS-FINAL" src="APPS FINAL.png"></th>
+                <th><a href="https://2saif.github.io/about.html"</a><img id="ABOUT-ME-FINAL" src="ABOUT ME FINAL.png"></th>
             </tr>
         </thead>
      </table>
