--- a/apps.html
+++ b/apps.html
@@ -18,7 +18,7 @@
             </tr>
         </thead>
      </table>
-        <p>On this tab, I will upload all the "Apps" I have made for the programs that I have written throught attending the CSC 106 course at the University of Rhode Island.</p>
+        <p id="Saif-Apps">On this tab, I will upload all the "Apps" I have made for the programs that I have written throught attending the CSC 106 course at the University of Rhode Island.</p>
         Back to <a href="index.html"> home page </a>
         
      </body>
