--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
             </tr>
         </thead>
     </table>
-        <table>
+        <table id="music-table">
             <thead>
                 <tr>
                     <th><img id="JCole" src="jcole.jpg"</th>
