--- a/javascripts.html
+++ b/javascripts.html
@@ -18,6 +18,7 @@
             </tr>
         </thead>
      </table>
+        <h2>WHAT TO EXPECT ON THE JAVASCRIPTS TAB</h2>
         <p id="Saif-Javascript">This tab will provide links to all the programs that I have written through Khan Academy during my CSC 106 course while attending the University of Rhode Island.</p>
         
     Back to <a href="index.html"> home page </a>
