--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <thead>
             <tr>
                 <th><img id="Saif1" src="Saif.jpg"</th>
-                <th><img id="Saif2" src="Saif2.jpg"</th>
+                <th><img id="Saif2" src="Saif2.png"</th>
                 <th><img id="JCole" src="jcole.jpg"</th>
                 <th><img id="Rap" src="rap.jpg"</th>
             </tr>
