--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     </head>
     <body>
     <img src="bannerfinalusethisone.png">
-    <h1>ABOUT ME</h1>
+    <h1 id="about1">ABOUT ME</h1>
     <table id="nav-table">
         <thead>
             <tr>
