--- a/apps.html
+++ b/apps.html
@@ -7,7 +7,7 @@
     </head>
     <body>
     <img src="bannerfinalusethisone.png">
-    <h1>MY APPS</h1>
+    <h1 id="apps1">MY APPS</h1>
     <table id="nav-table">
         <thead>
             <tr>
@@ -18,7 +18,7 @@
             </tr>
         </thead>
      </table>
-        <h2>WHAT TO EXPECT ON THE APPS TAB</h2>
+        <h2 id="apps2">WHAT TO EXPECT ON THE APPS TAB</h2>
         <p id="Saif-Apps">On this tab, I will upload all the "Apps" I have made for the programs that I have written throught attending the CSC 106 course at the University of Rhode Island.</p>
         Back to <a href="index.html"> home page </a>
         
