--- a/javascripts.html
+++ b/javascripts.html
@@ -7,7 +7,7 @@
     </head>
     <body>
     <img src="bannerfinalusethisone.png">
-    <h1>MY JAVASCRIPTS</h1>
+    <h1 id="javascript1">MY JAVASCRIPTS</h1>
     <table id="nav-table">
         <thead>
             <tr>
@@ -18,7 +18,7 @@
             </tr>
         </thead>
      </table>
-        <h2>WHAT TO EXPECT ON THE JAVASCRIPTS TAB</h2>
+        <h2 id="javascript2">WHAT TO EXPECT ON THE JAVASCRIPTS TAB</h2>
         <p id="Saif-Javascript">This tab will provide links to all the programs that I have written through Khan Academy during my CSC 106 course while attending the University of Rhode Island.</p>
         
     Back to <a href="index.html"> home page </a>
